formatting essay and source links

--- a/readingpage.html
+++ b/readingpage.html
@@ -1,24 +1,53 @@
 <!doctype html>
 <html>
+
 <head>
-<link rel="stylesheet" href ="stylesheet.css">
-<link rel="icon"  href="favicon_io/favicon.ico" type="image/x-icon">
-<meta charset="UTF-8">
-<title>Reading</title>
+  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8">
+  <title>Reading</title>
 </head>
 
 <body>
   <div class="wrapper">
-<h1 id="top">Reading </h1>
-<ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a class ="active" href ="readingpage.html">Reading</a> </li>
-  <li><a href = "essaypage.html">Essay</a> </li>
-  <li><a href ="mappage.html">Map</a> </li>
-  <li><a href="surveypage.html">Chat</a> </li>
-  <li><a href="aboutpage.html">About</a></li>
-</ul>
-<h2>here I will post some reading related to my journey with trash. however i have yet to find any readings so this page will be updated shortly (or not shortly).</h2>
-</div>
+    <h1 id="top">Reading </h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+
+      <li><a href="essaypage.html">Essay</a> </li>
+      <li><a class="active" href="readingpage.html">Reading</a> </li>
+      <li><a href="mappage.html">Map</a> </li>
+      <li><a href="surveypage.html">Chat</a> </li>
+      <li><a href="aboutpage.html">About</a></li>
+    </ul>
+    <h2>Sources used in my essay</h2>
+    <p id="Banash">Banash, David, and DeGregorio, John. “The Aesthetics of Trash.” NANO. </p>
+    <p style="margin-left: 25px;"><a href="https://nanocrit.com/issues/issue7/introduction-aesthetics-trash"
+        target="_blank">https://nanocrit.com/issues/issue7/introduction-aesthetics-trash</a></p>
+    <br>
+    <p id="Bogost">Bogost, Ian. “Ontography.” Alien Phenomenology, or What It’s Like to Be a Thing.</p>
+    <p style="margin-left: 25px;"><a
+        href="https://rutgers.instructure.com/courses/262763/files/37903600/download?download_frd=1"
+        target="_blank">“Ontography”.pdf</a></p>
+    <br>
+    <p id="Ibarra">Ibarra, Paola. “Beautiful Trash.” ReVista</p>
+    <p style="margin-left: 25px;"><a href="https://revista.drclas.harvard.edu/beautiful-trash/"
+        target="_blank">https://revista.drclas.harvard.edu/beautiful-trash/</a></p>
+    <br>
+    <p id="Lee">Lee, Tori. “An Archaeologist Talks Trash.” University of Chicago News.</p>
+    <p style="margin-left: 25px;"><a href="https://news.uchicago.edu/story/archaeologist-talks-trash"
+        target="_blank">https://news.uchicago.edu/story/archaeologist-talks-trash</a></p>
+    <br>
+    <p id="Marin">Marín-Beltrán, Isabel, et al. “Scientists’ Warning against the Society of Waste.” Science of The Total
+      Environment.</p>
+    <p style="margin-left: 25px;"><a href="https://www.sciencedirect.com/science/article/pii/S0048969721064378"
+        target="_blank">https://www.sciencedirect.com/science/article/pii/S0048969721064378</a></p>
+    <br>
+    <p id="Thill">Thill, Brian. “Trash Familiars/ Tabflab.” <i>Waste</i>.</p>
+    <p style="margin-left: 25px;"><a
+        href="https://rutgers.instructure.com/courses/262763/files/37903745/download?download_frd=1"
+        target="_blank">"Trash Familiars/Tabflab".pdf</a></p>
+  </div>
 </body>
+
 </html>
