--- a/surveypage.html
+++ b/surveypage.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  
+
   <link rel="stylesheet" href="stylesheet.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,23 +15,26 @@
 </head>
 
 <body>
-<div class="wrapper">
+  <div class="wrapper">
 
 
-  <h1>Chat Page</h1>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="readingpage.html">Reading</a> </li>
-    <li><a href="essaypage.html">Essay</a> </li>
-    <li><a href="mappage.html">Map</a> </li>
-    <li><a class="active" href="surveypage.html">Chat</a> </li>
-    <li><a href="aboutpage.html">About</a></li>
-  </ul>
-  
-  <iframe src="https://www3.cbox.ws/box/?boxid=3535502&boxtag=5tGhGa" width="100%" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
+    <h1>Chat Page</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
 
-  
-</div>
+      <li><a href="essaypage.html">Essay</a> </li>
+      <li><a href="readingpage.html">Reading</a> </li>
+      <li><a href="mappage.html">Map</a> </li>
+      <li><a class="active" href="surveypage.html">Chat</a> </li>
+      <li><a href="aboutpage.html">About</a></li>
+    </ul>
+
+    <iframe src="https://www3.cbox.ws/box/?boxid=3535502&boxtag=5tGhGa" width="100%" height="450"
+      allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0"
+      scrolling="auto"></iframe>
+
+
+  </div>
 </body>
 
 </html>
