--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+  <style>
+   
+  </style>
   <link rel="stylesheet" href="stylesheet.css">
   <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
