adding icons to table

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 
 <head>
-  <style>
-   
-  </style>
+  <script src="https://kit.fontawesome.com/978d78c6dc.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="stylesheet.css">
   <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
@@ -121,6 +119,7 @@
       because it refused to work!
     </p>
     <h2 id="table">Show me the data table!</h2>
+    <p><i class="fa-solid fa-recycle"></i>Recycled <i class="fa-solid fa-trash"></i>Thrown away <i class="fa-solid fa-hand-holding-dollar"></i>Sold</p>
     <table width="100%">
       <tr>
         <th>Item</th>
@@ -136,63 +135,63 @@
         <td>14g</td>
         <td>Sister</td>
         <td>Bathroom</td>
-        <td>$$$</td>
+        <td><i class="fa-solid fa-dollar-sign"></i><i class="fa-solid fa-dollar-sign"></i><i class="fa-solid fa-dollar-sign"></i></td>
         <td>3 months</td>
-        <td>Recycled</td>
+        <td><i class="fa-solid fa-recycle"></i></td>
       </tr>
       <tr>
         <td>Pen </td>
         <td>5g</td>
         <td>Art Store</td>
         <td>Desk</td>
-        <td> $</td>
+        <td><i class="fa-solid fa-dollar-sign"></i></td>
         <td>1 year</td>
-        <td>Recycled</td>
+        <td><i class="fa-solid fa-recycle"></i></td>
       </tr>
       <tr>
         <td>Tape</td>
         <td>1g</td>
         <td>Target</td>
         <td>Desk</td>
-        <td>$</td>
+        <td><i class="fa-solid fa-dollar-sign"></i></td>
         <td>2 months</td>
-        <td>Recycled</td>
+        <td><i class="fa-solid fa-recycle"></i></td>
       </tr>
       <tr>
         <td>Rubber Duck</td>
         <td>2g</td>
         <td>Dollar Store</td>
         <td>Shelf</td>
-        <td>$</td>
+        <td><i class="fa-solid fa-dollar-sign"></i></td>
         <td>5 months</td>
-        <td>Trash</td>
+        <td><i class="fa-solid fa-trash"></i></td>
       </tr>
       <tr>
         <td>Smiski</td>
         <td>4g</td>
         <td>Kinokuniya</td>
         <td>Shelf</td>
-        <td>$$</td>
+        <td><i class="fa-solid fa-dollar-sign"></i><i class="fa-solid fa-dollar-sign"></i></td>
         <td>3 months</td>
-        <td>Sold</td>
+        <td><i class="fa-solid fa-hand-holding-dollar"></i></td>
       </tr>
       <tr>
         <td>SD Card</td>
         <td>0.5g</td>
         <td>eBay</td>
         <td>Drawer</td>
-        <td>$$</td>
+        <td><i class="fa-solid fa-dollar-sign"></i><i class="fa-solid fa-dollar-sign"></i></td>
         <td>6 months</td>
-        <td>Sold</td>
+        <td><i class="fa-solid fa-hand-holding-dollar"></i></td>
       </tr>
       <tr>
-        <td>Game Cartrideg</td>
+        <td>Game Cartridge</td>
         <td>3g</td>
         <td>Gift</td>
         <td>Shelf</td>
-        <td>$$$</td>
+        <td><i class="fa-solid fa-dollar-sign"></i><i class="fa-solid fa-dollar-sign"></i><i class="fa-solid fa-dollar-sign"></i></td>
         <td>2 months</td>
-        <td>Sold </td>
+        <td><i class="fa-solid fa-hand-holding-dollar"></i> </td>
       </tr>
       <tr>
         <td>Candy</td>
@@ -201,16 +200,16 @@
         <td>Bag</td>
         <td>Free</td>
         <td>1 month</td>
-        <td>Trash</td>
+        <td><i class="fa-solid fa-trash"></i></td>
       </tr>
       <tr>
         <td>Hair Clip</td>
         <td>2g</td>
         <td>Small Business</td>
         <td>Vanity</td>
-        <td>$$</td>
+        <td><i class="fa-solid fa-dollar-sign"></i><i class="fa-solid fa-dollar-sign"></i></td>
         <td>4 months</td>
-        <td>Sold</td>
+        <td><i class="fa-solid fa-hand-holding-dollar"></i></td>
       </tr>
     </table>
     <a href="#top">Back to top</a>
