editing the essay and links

--- a/essaypage.html
+++ b/essaypage.html
@@ -26,7 +26,8 @@
       stock images. When was the last time you saw something truly boring, gross, needless, or maybe even … trashy! Yes!
       Trash! So often we document the natural gifts and beauties of the world, but what about the man-made trashes? This
       is why I set out to document some of my weekly trash items, because there truly is beauty in all things used,
-      unneeded, and discardable. There is truly a beautiful story in trash!<br> <br> Trash can also tell an important
+      unneeded, and discardable. Trash is beutiful because it can act as a medium of story telling, however it is the
+      stories it tells that can speak in more impactful matters.<br> <br> Trash can tell an important
       story about the responsibility of humanity and the human practices that result in waste accumulation, but also
       expression, art, and discussion around waste. In the web article <a
         href="http://127.0.0.1:56924/readingpage.html#:~:text=Ibarra%2C%20Paola.%20%E2%80%9CBeautiful%20Trash.%E2%80%9D%20ReVista">Beautiful
@@ -81,8 +82,8 @@
       more secretive stories of a one’s personal life, each item represents the difficult decision to let go. By
       documenting my trash, I become more aware and appreciative of the objects I use. Or I can become more aware and
       understanding of what I choose to let go of. Looking at your own trash offers an easy reflection into what we
-      choose to consume, and choices are everything! Trash is everything! Let’s take a look at some of my choices this
-      week. </p>
+      choose to consume, and choices are everything! Trash is everything! Take a look at some of my choices this
+      week in the <a href="index.html">Home Page</a>. </p>
   </div>
 </body>
 
