adding doodles to essay

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -20,7 +20,7 @@
       <li><a href="surveypage.html">Chat</a> </li>
       <li><a class="active" href="aboutpage.html">About</a></li>
     </ul>
-    <img src="images/mypicture.png" alt="Picture of Me" width="300" border="0" style="display:block;border: 0;">
+    <img src="images/miiface.png" alt="Picture of Me" width="300" border="0" style="float:right;display:block;border: 0;">
     <h2>Author: Amari Pardi </h2>
     <p>Bonjour, my name is Amari Pardi (at least that’s what I am on this website anyways). Welcome to my personal
       catalog of text, images, and opinions. My most popular blog thread follows my adventures in trash registry; where
