--- a/essaypage.html
+++ b/essaypage.html
@@ -27,7 +27,9 @@
       Trash! So often we document the natural gifts and beauties of the world, but what about the man-made trashes? This
       is why I set out to document some of my weekly trash items, because there truly is beauty in all things used,
       unneeded, and discardable. Trash is beutiful because it can act as a medium of story telling, however it is the
-      stories it tells that can speak in more impactful matters.<br> <br> Trash can tell an important
+      stories it tells that can speak in more impactful matters.<br>
+      <img style ="float:right; width:35%"src="/images/iphone-doodle.png">
+      <br> Trash can tell an important
       story about the responsibility of humanity and the human practices that result in waste accumulation, but also
       expression, art, and discussion around waste. In the web article <a
         href="http://127.0.0.1:56924/readingpage.html#:~:text=Ibarra%2C%20Paola.%20%E2%80%9CBeautiful%20Trash.%E2%80%9D%20ReVista">Beautiful
@@ -41,7 +43,8 @@
       objects that can never produce the wholeness they promise. Once the newly bought objects are found empty, the
       cycle continues”. The cycle of buying within a consumerist society results in the relationship we have now with
       waste. Like a soul-less, unfulfilling repetition of use but never reuse, most items we come across daily are
-      products of the ‘single-use’ model of production that has become increasingly more popular. <br><br> This issue
+      products of the ‘single-use’ model of production that has become increasingly more popular. <br>
+      <br> This issue
       even extends into global politics, as the manners of consumption effect the overall economy of countries, as
       outlined in the academic paper <a
         href="http://127.0.0.1:56924/readingpage.html#:~:text=Mar%C3%ADn%2DBeltr%C3%A1n%2C%20Isabel%2C%20et%20al.%20%E2%80%9CScientists%E2%80%99%20Warning%20against%20the%20Society%20of%20Waste.%E2%80%9D%20Science%20of%20The%20Total%20Environment.">Scientists'
@@ -54,7 +57,9 @@
       classes differ, and how the ones defining waste cycles and structures do so with only profit in mind and no
       concern for environmental and societal inequalities. Trash extends beyond just the action of throwing something
       out; it’s also about what we throw out and how that truly sparks the discussion about hidden role waste plays in
-      every corner of the world. <br><br>Personally, identifying and resonating with what I decide to be waste is the
+      every corner of the world. <br><br>
+      <img style="float:left;width:40%;"src="/images/Archeology-doodle.png">
+      <br>Personally, identifying and resonating with what I decide to be waste is the
       first step for being more mindful about consumption in general. I appreciate how <a
         href="http://127.0.0.1:56924/readingpage.html#:~:text=Lee%2C%20Tori.%20%E2%80%9CAn%20Archaeologist%20Talks%20Trash.%E2%80%9D%20University%20of%20Chicago%20News.">Sarah
         Newman reminds us in her interview with UChicago News</a> that, “The biggest myth about trash is simply that we
