--- a/essaypage.html
+++ b/essaypage.html
@@ -28,7 +28,7 @@
       is why I set out to document some of my weekly trash items, because there truly is beauty in all things used,
       unneeded, and discardable. Trash is beutiful because it can act as a medium of story telling, however it is the
       stories it tells that can speak in more impactful matters.<br>
-      <img style ="float:right; width:35%"src="/images/iphone-doodle.png">
+      <img src="/images/iphone-doodle.png" style ="float:right; width:35%" >
       <br> Trash can tell an important
       story about the responsibility of humanity and the human practices that result in waste accumulation, but also
       expression, art, and discussion around waste. In the web article <a
@@ -58,7 +58,7 @@
       concern for environmental and societal inequalities. Trash extends beyond just the action of throwing something
       out; it’s also about what we throw out and how that truly sparks the discussion about hidden role waste plays in
       every corner of the world. <br><br>
-      <img style="float:left;width:40%;"src="/images/Archeology-doodle.png">
+      <img src="/images/Archeology-doodle.png" style="float:left;width:40%;">
       <br>Personally, identifying and resonating with what I decide to be waste is the
       first step for being more mindful about consumption in general. I appreciate how <a
         href="http://127.0.0.1:56924/readingpage.html#:~:text=Lee%2C%20Tori.%20%E2%80%9CAn%20Archaeologist%20Talks%20Trash.%E2%80%9D%20University%20of%20Chicago%20News.">Sarah
