--- a/mappage.html
+++ b/mappage.html
@@ -23,6 +23,7 @@
     <img src="images/Map.jpg" alt="a map">
     <h1>A map from a video game I like</h1>
     <h2>has nothing to do with my trash </h2>
+    <p>I want to try and draw my own map, but using Photoshop. except i dont have a digital pen!</p>
   </div>
 </body>
 
