fixing embedded source links

--- a/essaypage.html
+++ b/essaypage.html
@@ -32,13 +32,13 @@
       <br> Trash can tell an important
       story about the responsibility of humanity and the human practices that result in waste accumulation, but also
       expression, art, and discussion around waste. In the web article <a
-        href="http://127.0.0.1:56924/readingpage.html#:~:text=Ibarra%2C%20Paola.%20%E2%80%9CBeautiful%20Trash.%E2%80%9D%20ReVista">Beautiful
+        href="https://ama-rakki.github.io/twp.github.io/readingpage.html#:~:text=Ibarra%2C%20Paola.%20%E2%80%9CBeautiful%20Trash.%E2%80%9D%20ReVista">Beautiful
         Trash; Art and Transformation</a>, author Paola Ibarra makes a point that, “talking about trash sparks a
       discussion about society and mass consumerism”. She shifts the perspective of trash as an individual item, to
       trash being a communitive contribution that includes all consumers. It highlights the responsibility that all
       consumers have to adding to the wide waste piles littering the world. Yet, consumers feel the need to keep
       consuming; as <a
-        href="http://127.0.0.1:56924/readingpage.html#:~:text=Banash%2C%20David%2C%20and%20DeGregorio%2C%20John.%20%E2%80%9CThe%20Aesthetics%20of%20Trash.%E2%80%9D%20NANO.">Banash
+        href="https://ama-rakki.github.io/twp.github.io/readingpage.html#:~:text=Banash%2C%20David%2C%20and%20DeGregorio%2C%20John.%20%E2%80%9CThe%20Aesthetics%20of%20Trash.%E2%80%9D%20NANO.">Banash
         and DeGregoria explain in their issue for NANO</a>, “consumers are enjoined to the endless repetition of buying
       objects that can never produce the wholeness they promise. Once the newly bought objects are found empty, the
       cycle continues”. The cycle of buying within a consumerist society results in the relationship we have now with
@@ -47,7 +47,7 @@
       <br> This issue
       even extends into global politics, as the manners of consumption effect the overall economy of countries, as
       outlined in the academic paper <a
-        href="http://127.0.0.1:56924/readingpage.html#:~:text=Mar%C3%ADn%2DBeltr%C3%A1n%2C%20Isabel%2C%20et%20al.%20%E2%80%9CScientists%E2%80%99%20Warning%20against%20the%20Society%20of%20Waste.%E2%80%9D%20Science%20of%20The%20Total%20Environment.">Scientists'
+        href="https://ama-rakki.github.io/twp.github.io/readingpage.html#:~:text=Mar%C3%ADn%2DBeltr%C3%A1n%2C%20Isabel%2C%20et%20al.%20%E2%80%9CScientists%E2%80%99%20Warning%20against%20the%20Society%20of%20Waste.%E2%80%9D%20Science%20of%20The%20Total%20Environment.">Scientists'
         warning against the society of waste</a>, it plays a complicated role in Latin America as the country continues
       to expand its middle class. The group discusses expanding mindful consumption into educational curriculum, but
       recognize that, “it is also a challenge for most industrialized countries where a consumption-driven model is
@@ -61,14 +61,14 @@
       <img src="images/Archeology-doodle.png" style="float:left;width:40%;">
       <br>Personally, identifying and resonating with what I decide to be waste is the
       first step for being more mindful about consumption in general. I appreciate how <a
-        href="http://127.0.0.1:56924/readingpage.html#:~:text=Lee%2C%20Tori.%20%E2%80%9CAn%20Archaeologist%20Talks%20Trash.%E2%80%9D%20University%20of%20Chicago%20News.">Sarah
+        href="https://ama-rakki.github.io/twp.github.io/readingpage.html#:~:text=Lee%2C%20Tori.%20%E2%80%9CAn%20Archaeologist%20Talks%20Trash.%E2%80%9D%20University%20of%20Chicago%20News.">Sarah
         Newman reminds us in her interview with UChicago News</a> that, “The biggest myth about trash is simply that we
       talk about throwing things “away.” There is not, nor has there ever been, an “away” for things to go”. It feels
       true that as humans we instinctively have an ‘out of sight out of mind’ point of view. Therefore making it
       difficult for us to fully understand the significance of objects we treat as trash. We need to intentionally
       remind ourselves of the waste we produce otherwise we naturally forget about the things we discard (we do discard
       because we don’t need it after all!). Brian Thill makes the same argument in his chapter <a
-        href="http://127.0.0.1:56924/readingpage.html#:~:text=Thill%2C%20Brian.%20%E2%80%9CTrash%20Familiars/%20Tabflab.%E2%80%9D%20Waste.">Trash
+        href="https://ama-rakki.github.io/twp.github.io/readingpage.html#:~:text=Thill%2C%20Brian.%20%E2%80%9CTrash%20Familiars/%20Tabflab.%E2%80%9D%20Waste.">Trash
         Familiars</a> that waste continues to exist even after we think it is “away”. He writes, “waste is also an
       orphan object. It can often be found existing somewhere outside of both the free-floating state and entombment, at
       least for a time”. The “away” we send our trash too is often not as far away as we think (landfills and garbage
@@ -78,7 +78,7 @@
       Archeologist Newman even described her field as “the science of rubbish”. Yet what we consider trash (even if it’s
       found littered in every corner of the earth) should remain identified as trash. Lest we normalize pollutants as a
       means of validating out continued overconsumption. <a
-        href="http://127.0.0.1:56924/readingpage.html#:~:text=Bogost%2C%20Ian.%20%E2%80%9COntography.%E2%80%9D%20Alien%20Phenomenology%2C%20or%20What%20It%E2%80%99s%20Like%20to%20Be%20a%20Thing.">Ian
+        href="https://ama-rakki.github.io/twp.github.io/readingpage.html#:~:text=Bogost%2C%20Ian.%20%E2%80%9COntography.%E2%80%9D%20Alien%20Phenomenology%2C%20or%20What%20It%E2%80%99s%20Like%20to%20Be%20a%20Thing.">Ian
         Bogost reflects this idea in his chapter Ontography</a>; he states, “we must not confuse the values of the
       design of objects for human use, such as doors, toasters, and computers, with the nature of the world itself”. The
       objects we use (and eventually discard) will forever be only useful in our sphere of humanity, so we should be
