changing font and adding wrapper elements

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -26,9 +26,7 @@
         style="
           float: right;
           display: block;
-          border: 5;
-          border-radius: 50%;
-          border-color: #fe4337;
+          border:none;
         "
       />
       <h2>Author: Amari Pardi</h2>
