adding more back to top links

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
       is probably using it, that’s about all its good for, so when the roll of tape is diminished it becomes useless.
       I’m throwing this away because it is used!
     </p>
+      <a href="#top">Back to top</a>
+
     <h3>Amused</h3>
     <img src="images/DSCN1808.JPG" alt="Count Quakula" width="300" height="270" /> <img src="images/DSCN1815.JPG"
       alt="Clone Smiskis" width="300" height="270" /> <img src="images/DSCN1817.JPG" alt="4GB SD Card" width="300"
@@ -246,6 +248,8 @@
       discarded at the end of their life. I hope this gives insight onto being mindful of our waste! Maybe next week
       will feature more toys as I continue to declutter my shelf. That’s all for this week, let me know if any of your
       trash item are similar to mine, I would love to compare! Have a great day, thanks for reading! </p>
+      <a href="#top">Back to top</a>
+
   </div>
 </body>
 
