--- a/mappage.html
+++ b/mappage.html
@@ -20,7 +20,7 @@
       <li><a href="surveypage.html">Chat</a> </li>
       <li><a href="aboutpage.html">About</a></li>
     </ul>
-    <img src="images/Map.jpg" alt="a map">
+    <img src="images/Map.jpg" alt="a map" style="width:800px; margin-left: auto; margin-right: auto; display:block ;">
     <h1>A map from a video game I like</h1>
     <h2>has nothing to do with my trash </h2>
   </div>
