--- a/aboutpage.html
+++ b/aboutpage.html
@@ -40,7 +40,7 @@
         comforting, I love to eat dark chocolate at night, and I always drink
         coffee in the morning. I have a scrapbook journal, I like to buy things
         for my loved ones, and I have a small dislike for people with absurd
-        phobias. I guess an important thing to know amour me is that I am fond
+        phobias. I guess an important thing to know about me is that I am fond
         of the tangents taken in life fueled by passion. I am often inspired by
         art, movies, books, people, and music to do random projects
         passionately. Or at least that is something I try to center my life
