adding logo throught pages

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="wrapper">
-      <h1>About the author</h1>
+      <h1>About the author<img src="images/sitelogo.svg" style="border:none; max-width: 10%;"></h1>
       <ul>
         <li><a href="index.html">Home</a></li>
 
