--- a/essaypage.html
+++ b/essaypage.html
@@ -10,7 +10,8 @@
 
 <body>
   <div class="wrapper">
-    <h1>Essay Page</h1>
+    <h1>Essay Page <img src="images/sitelogo.svg" style="border:none; max-width: 10%;">
+    </h1>
     <ul>
       <li><a href="index.html">Home</a></li>
 
@@ -23,7 +24,7 @@
     <h2>Expanded Preface</h2>
     <p>It is almost a default for humans with a camera to photograph what their eyes deem as beautiful. Nothing against
       sunsets, and flowers, and fresh morning dew on grass, but I find we have an overwhelming amount of these lush
-      stock images. When was the last time you saw something truly boring, gross, needless, or maybe even … trashy! Yes!
+      stock images. When was the last time you saw something truly boring, gross, needless, or maybe even … trashy! Yes!<
       Trash! So often we document the natural gifts and beauties of the world, but what about the man-made trashes? This
       is why I set out to document some of my weekly trash items, because there truly is beauty in all things used,
       unneeded, and discardable. Trash is beutiful because it can act as a medium of story telling, however it is the
