--- a/mappage.html
+++ b/mappage.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="wrapper">
-    <h1>Map Page</h1>
+    <h1>Map Page<img src="images/sitelogo.svg" style="border:none; max-width: 10%;"></h1>
     <ul>
       <li><a href="index.html">Home</a></li>
 
