--- a/surveypage.html
+++ b/surveypage.html
@@ -18,7 +18,7 @@
   <div class="wrapper">
 
 
-    <h1>Chat Page</h1>
+    <h1>Chat Page<img src="images/sitelogo.svg" style="border:none; max-width: 10%;"></h1>
     <ul>
       <li><a href="index.html">Home</a></li>
 
